objects/SI_Document_Type_EQAI_Mappping__mdt/SI_Document_Type_EQAI_Mappping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping Salesforce field values to EQAI Table-Field values.</description>
    <label>SI Document Type EQAI Mappping</label>
    <pluralLabel>SI Document Type EQAI Mapppings</pluralLabel>
</CustomObject>