objects/SI_Document_Type_EQAI_Mappping__mdt/fields/EQAI_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Table_Name__c</fullName>
    <label>EQAI Table Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>