objects/SI_Document_Type_EQAI_Mappping__mdt/fields/Salesforce_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_API_Name__c</fullName>
    <label>Salesforce Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>